# pheval.phen2gene

./: README.md  config.yaml  pyproject.toml  tox.ini
.github/workflows/: pypi-publish.yml  qc.yml
src/pheval_phen2gene/: cli.py  cli_phen2gene.py  config_parser.py  phen2gene_config_parser.py  runner.py  tool_specific_configuration_parser.py
src/pheval_phen2gene/post_process/: post_process.py  post_process_results_format.py
src/pheval_phen2gene/prepare/: prepare_commands.py  prepare_inputs.py
src/pheval_phen2gene/run/: run.py
src/pheval_phen2gene/utils/: phen2gene_config_parser.py
tests/: test_post_process_results_format.py  test_prepare_commands.py
tests/input_dir/: phenopacket.json
