[tool.poetry]
name = "pheval-phen2gene"
version = "0.1.0"
description = ""
authors = ["Yasemin Bridges <y.bridges@qmul.ac.uk>"]
readme = "README.md"
packages = [{include = "pheval_phen2gene", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pheval = {path = "/Users/yaseminbridges/Documents/GitHub/pheval"}
pyserde = "^0.9.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.15.6"
pycodestyle = "^2.10.0"


[tool.poetry.scripts]
pheval-phen2gene = "pheval_phen2gene.cli:main"

[tool.poetry.plugins."pheval.plugins"]
phen2gene = "pheval_phen2gene.runner:Phen2GenePhEvalRunner"

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
